--- a/Orthoseisnet.ipynb
+++ b/Orthoseisnet.ipynb
@@ -25,8 +25,8 @@
     "import scipy.io\n",
     "import mat73\n",
     "import numpy as np\n",
-    "loc=np.load(\"D:/Supriyo/onedrive/OneDrive - iitkgp.ac.in/Sanjay_unet/locations.npy\")\n",
-    "data_dict=mat73.loadmat(\"D:/Supriyo/onedrive/OneDrive - iitkgp.ac.in/Sanjay_unet/vi.mat\")\n",
+    "loc=np.load(\"D:/locations.npy\")\n",
+    "data_dict=mat73.loadmat(\"D:/vi.mat\")\n",
     "print(\"Data loading completed\")\n",
     "data=data_dict['vi']\n",
     "x_temp=[]\n",
